# JaxGCRL

./: ARCHITECTURE.md  flake.nix  pyproject.toml  run.py
jaxgcrl/agents/: __init__.py
jaxgcrl/agents/crl/: crl.py
jaxgcrl/agents/hac/: __init__.py  hac.py  losses.py  networks.py
jaxgcrl/agents/hiql/: __init__.py  hiql.py  losses.py  networks.py
jaxgcrl/agents/hsac/: __init__.py  hsac.py  losses.py  networks.py
jaxgcrl/agents/ppo/: ppo.py
jaxgcrl/agents/sac/: networks.py  sac.py
jaxgcrl/agents/td3/: td3.py
jaxgcrl/utils/: config.py  evaluator.py  replay_buffer_nnx.py
tests/: test_hac_losses.py  test_hac_networks.py  test_replay_buffer_nnx.py
