[project]
name = "jaxgcrl"
version = "0.2.8"
description = "Blazingly fast goal-conditioned environments based on MJX and BRAX."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
  "pip>=25.0.1",
  "jax==0.9.1",
  "flax==0.12.5",
  "brax==0.14.1",
  "matplotlib>=3.10,<3.11",
  "mujoco==3.6.0",
  "mujoco-mjx==3.6.0",
  "numpy>=2,<3",
  "scipy>=1.17,<1.18",
  "tyro>=1.0,<2",
  "wandb>=0.25,<0.26",
  "wandb-osh>=1.2,<2",
]

[project.optional-dependencies]
cuda12 = [
  "jax[cuda12]==0.9.1; platform_system == 'Linux'",
]
cuda13 = [
  "jax[cuda13]==0.9.1; platform_system == 'Linux'",
]

[project.scripts]
jaxgcrl = "run:cli"

[project.urls]
homepage = "https://michalbortkiewicz.github.io/JaxGCRL/"

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "run" ]

[tool.setuptools.package-data]
"jaxgcrl.envs" = ["**/assets/*"]

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
